Bug 866866 - Inspect phis at the start of loop header rather than trailing values, r=dvander.